# pythonForAi

./: .env.example  .gitignore  =4.46.1  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json  run.sh
.github/workflows/: ci.yml
lessons/: 01_prompt.py  03-dictionary.py  04-file.py  05-file.csv  06-导入命令.py  07-data.csv  07-第三方包.py
lessons/01-pythonBasic/: 02-list.py  03-dictionary.py  04-file-write.txt  04-file.py  05-csv.py  08-外部包.py  09-apidiaoyong.py  09-调用ai模型.py
lessons/02-prompt/: 01-界定符.py  02-结构化输出.py  03-迭代式提示词.py  04-chatbot.py  openai_lesson.py  prompt.md
lessons/03-langchain/: .translate_checkpoint.json  01-model&prompts&parsers.md  01-model&prompts&parsers.py  01-官网教程.py  02-llm生成json.py  03-memory.py  03-memoryWindow.py  04-chains.py  05-routerChain.py  06-questionAndAnswer.py  07-evaluation.py  08-agent.py  1.json  Data.csv  OutdoorClothingCatalog_1000.csv  OutdoorClothingCatalog_1000_zh.csv  langchain.md  lessonVoice.md  translatePrompt.md  translate_catalog.py
lessons/03-langchain/notes/: 00-overview.md  01-models-prompts-parsers.md  02-memory.md  03-chains.md  04-rag-qa.md  05-evaluation.md  06-agents.md  07-modern-langchain-api.md
lessons/032-langchain/: langchain.md  test.py
lessons/04-transformer/: 01-tokenizers.py  02-transformer.md  02-transformers2.py  03-transformer2.md  transformer.md
src/python_for_ai/: cli.py  config.py
src/python_for_ai/llm/: __init__.py  client.py  service.py
tests/: conftest.py  test_config.py  test_llm_service.py
utils/: __init__.py  helper_functions.py
