[project]
name = "python-for-ai"
version = "0.1.0"
description = "Python for AI learning project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "ipython>=8.0.0",
    "panel>=1.0.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-qwq>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.3.0",
    "dashscope>=1.20.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]
transformer = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.30.0",
]

[project.scripts]
python-for-ai = "python_for_ai.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests", "lessons"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
include = ["src", "tests", "lessons"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
extraPaths = ["src"]
